--- a/web/noptfunc.html
+++ b/web/noptfunc.html
@@ -88,10 +88,10 @@ class Program
 </pre>
 
 <p>
-NOptFunc is maintained at the <a href="">noptfunc</a> Google
-Code project. To use it simply include 
-<a href="">NOptFunc.cs</a> 
-in your project.
+NOptFunc is maintained at the <a href="http://code.google.com/p/noptfunc/">noptfunc</a>
+Google Code project. To use it simply include 
+<a href="http://code.google.com/p/noptfunc/source/browse/trunk/src/NOptFunc.cs">NOptFunc.cs</a> 
+in your project (plain source file <a href="http://noptfunc.googlecode.com/svn/trunk/src/NOptFunc.cs">here</a>).
 </p>
 
 <h3>Positional and Option Arguments</h3>
