git-svn-id: http://noptfunc.googlecode.com/svn/trunk@7 e87c7552-528c-11de-8b28-e1b452efc53a

--- a/web/noptfunc.html
+++ b/web/noptfunc.html
@@ -87,6 +87,11 @@ class Program
 }
 </pre>
 
+<p>Run() specifies that there is one required argument 
+&endash filename &endash and one option which is used on 
+the command line as either <b>-v</b> or <b>--verbose</b>.
+</p>
+
 <p>
 NOptFunc is maintained at the <a href="http://code.google.com/p/noptfunc/">noptfunc</a>
 Google Code project. Currently it is not built into as a separate assembly. 
