git-svn-id: http://noptfunc.googlecode.com/svn/trunk@8 e87c7552-528c-11de-8b28-e1b452efc53a

--- a/web/noptfunc.html
+++ b/web/noptfunc.html
@@ -196,7 +196,7 @@ short names, for example:
 
 <pre class="code">
 public static void Run(
-  [Option(Long="filename", Short="f")] string s)
+  [Option(Long="filename", Short='f')] string s)
 {
   // ...
 }
