git-svn-id: http://noptfunc.googlecode.com/svn/trunk@10 e87c7552-528c-11de-8b28-e1b452efc53a

--- a/web/noptfunc.html
+++ b/web/noptfunc.html
@@ -88,7 +88,7 @@ class Program
 </pre>
 
 <p>Run() specifies that there is one required argument 
-&endash filename &endash and one option which is used on 
+&ndash filename &ndash and one option which is used on 
 the command line as either <b>-v</b> or <b>--verbose</b>.
 </p>
 
