--- a/web/noptfunc.html
+++ b/web/noptfunc.html
@@ -2,7 +2,7 @@
  
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Cook Computing - NOptFunc</title>
+    <title>NOptFunc</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.cookcomputing.com/blog/index.xml" /> 
     <link type="text/css" rel="stylesheet" href="cookcomputingblog.css" />        
