git-svn-id: http://noptfunc.googlecode.com/svn/trunk@17 e87c7552-528c-11de-8b28-e1b452efc53a

--- a/web/noptfunc.html
+++ b/web/noptfunc.html
@@ -94,7 +94,7 @@ the command line as either <b>-v</b> or <b>--verbose</b>.
 
 <p>
 NOptFunc is maintained at the <a href="http://code.google.com/p/noptfunc/">noptfunc</a>
-Google Code project under the <a href="http://code.google.com/p/noptfunc/source/browse/trunk/LICENSE.txt"MIT License</a>. Currently it is not built into as a separate assembly. 
+Google Code project under the <a href="http://code.google.com/p/noptfunc/source/browse/trunk/LICENSE.txt">MIT License</a>. Currently it is not built into as a separate assembly. 
 To use it simply include 
 <a href="http://code.google.com/p/noptfunc/source/browse/trunk/src/NOptFunc.cs">NOptFunc.cs</a> 
 in your project (plain source file <a href="http://noptfunc.googlecode.com/svn/trunk/src/NOptFunc.cs">here</a>).
